testsuite/tests/typecheck/should_compile/T11062.hs
{-# LANGUAGE TypeFamilies #-}
module T11062 where
import T11062a
type family F a
