testsuite/tests/typecheck/should_fail/T13981F.hs
{-# LANGUAGE TypeFamilies #-}
module T13981F where
import Data.Kind
type family F a :: Type
